Fixed image quality by maintaining an aspect ratio and covering the card

--- a/src/styles/ItemCard.css
+++ b/src/styles/ItemCard.css
@@ -4,6 +4,7 @@
     color: var(--text-color);
     display: flex;
     flex-direction: column;
+    height: min-content;
     overflow: hidden;
     transition: all .25s ease;
 }
@@ -28,16 +29,10 @@
     width: fit-content;
 }
 
-.img-wrapper {
-    background-color: black;
-    display: flex;
-    height: 230px !important;
-    justify-content: center;
-}
-
 .item-card img {
-    align-self: center;
-    height: 230px !important;
+    aspect-ratio: 1.7 / 1;
+    object-fit: cover;
+    width: 100%;
 }
 
 .bottom-card {
